--- a/docs/css/global.css
+++ b/docs/css/global.css
@@ -222,6 +222,10 @@ h3
         font-family: Georgia, 'Times New Roman', Times, serif;
         color:#543913;
         }
+h4
+{
+    font-family: Georgia, 'Times New Roman', Times, serif;
+}
     
 p
     {
@@ -255,11 +259,11 @@ a.link_decoration {
     padding-top: 50px;
     padding-right: 100px;
     position: relative;
-    max-width: 40vw; /* Set the max width of the carousel */
+    max-width: 100%; /* Set the max width of the carousel */
     overflow: hidden; /* Hide overflow */
     display: flex;
     justify-content: center;
-    height: 300px;
+    height: 500px;
 }
 
 
@@ -272,8 +276,8 @@ a.link_decoration {
 
 .carousel-images img {
     width: 100%;
-    height: auto;
-    object-fit:cover;
+    height: 100%;
+    object-fit: contain;
     display: none; 
   }
 
@@ -284,18 +288,23 @@ a.link_decoration {
 }
 
 .prev {
-    left: 0px;
+    left: 100px;
 }
 
 .next {
-    right: 100px; 
+    right: 200px; 
 }
 
 /*SMALL SCREEN */
-@media (max-width: 480px) {
+@media (max-width: 500px) {
     .grid-container {
         grid-template-columns: 1fr;
         justify-items: center;
+        width: 100%;
+    }
+    .header 
+    {
+        background-image: none;
     }
     .footer {
         grid-template-columns: 1fr; 
@@ -309,21 +318,35 @@ a.link_decoration {
     .textImg
         {
             grid-template-columns: 1fr;
-            padding-bottom: 50px; 
+            padding-inline: 20px;
         }
     .carousel-images img {
-            width: 400px;
+            width: 300px;
             height: auto;
             object-fit:cover;
             display: none; 
           }
           .next {
-            right: 0px; 
+            right: 25px; 
         }
+        .prev {
+            left: 25px;
+        }
+        .carousel 
+        { 
+            padding-inline: 50px;
+            position:relative;
+            max-width: 75%; /* Set the max width of the carousel */
+            overflow: hidden; /* Hide overflow */
+            display: flex;
+            justify-content: center;
+        }
+        
+
 }
 
 /*MED SCREEN */
-@media (min-width: 481px) and (max-width: 1000px) {
+@media (min-width: 501px) and (max-width: 1000px) {
     .grid-container {
         grid-template-columns: 1fr;
         justify-items: center;
